# routerX

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  python_architecture_complete.md  report.json  report_viewer.html
docs/: 00_overview.md  01_prescreen_s0.md  02_p0_severe.md  03_p1_quality.md  04_p2_warning.md  detector_reference.md  essential_detectors_reference.md
frontend/: App.jsx  HistoryScreen.jsx  LeaderboardScreen.jsx  ReportScreen.jsx  Router Diagnostic Station v1 (dark).html  Router Diagnostic Station v2 (editorial).html  Router Diagnostic Station v3 (bento).html  Router Diagnostic Station v4 (liquid glass).html  Router Diagnostic Station v5 (hero).html  Router Diagnostic Station v6 (tool).html  Router Diagnostic Station v7 (visual tool).html  Router Diagnostic Station v8 (three-screen).html  Router Diagnostic Station v9 (drawer).html  Router Diagnostic Station.html  RunningScreen.jsx  SetupScreen.jsx  checks.js  leaderboard-data.js  styles.css  utils.js
reports/: commonstack_audit_report.md  commonstack_audit_report_zh.md  openrouter_audit_report_zh.md
reports/commonstack/: anthropic__claude-opus-4-5.json  anthropic__claude-opus-4-6.json  anthropic__claude-sonnet-4-5.json  anthropic__claude-sonnet-4-6.json  google__gemini-3-flash-preview.json  openai__gpt-4.1.json  (+6 more)
scripts/: admission_test.py  self_test_all.py  serve.py
src/: assets.py  client.py  config.py  events.py  models.py  registry.py  reporter.py  runner.py  tokenizer.py
tests/: conftest.py  mock_server.py  test_api.py  test_integration.py
web/: docs.html  index.html
(+118 files in other folders)
