[project]
name = "router-auditor"
version = "0.1.0"
description = "LLM API Router admission test suite (31 detectors)"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.0",
    "tiktoken>=0.7",
    "Pillow>=10.0",
    "pymupdf>=1.24.2",
    "rich>=13.0",
    "fastapi>=0.110",
]

[project.optional-dependencies]
serve = [
    "granian>=1.6; sys_platform != 'win32'",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "uvicorn>=0.29",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# src.models.TestConfig and src.runner.TestRunner start with "Test" but are
# not pytest test classes — suppress the collection warning.
python_classes = ["Test*Case", "Test*Suite"]
